--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "web",
-  "version": "0.0.1",
-  "description": "",
+  "name": "<%= packageName %>",
+  "version": "<%= version %>",
+  "description": " a LG project",
+  "author": {
+    "name": "<%= author %>",
+    "email": "<%= email %>"
+  },
+  "keywords": [
+    "lg", "<%= packageName %>"
+  ],
   "main": "index.js",
   "dependencies": {
     "css-loader": "^0.23.1",
@@ -24,6 +31,6 @@
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "花夏",
-  "license": "ISC"
+  "author": "<%= author %>",
+  "license": "<%= License %>"
 }
