--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-lg",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "description": "generator-lg",
   "homepage": "https://github.com/liubiao0810/generator-lg",
   "author": {
@@ -17,10 +17,17 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "chalk": "^1.0.0",
+    "chalk": "^1.1.3",
     "git-config": "0.0.7",
-    "yeoman-generator": "^0.23.3",
-    "yosay": "^1.0.0"
+    "yeoman-generator": "^0.20.3",
+    "gulp": "^3.9.1",
+    "gulp-coveralls": "^0.1.4",
+    "gulp-eslint": "^2.0.0",
+    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp-istanbul": "^1.0.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-nsp": "^2.4.1",
+    "gulp-plumber": "^1.1.0"
   },
   "eslintConfig": {
     "extends": "xo-space",
