--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "<%= packageName %>",
-  "version": "<%= version %>",
+  "name": "test",
+  "version": "0.1.0",
   "description": " a LG project",
-  "author": {
-    "name": "<%= author %>",
-    "email": "<%= email %>"
-  },
+  "author": "花夏",
   "keywords": [
-    "lg", "<%= packageName %>"
+    "lg",
+    "test"
   ],
   "main": "index.js",
   "dependencies": {
+    "chalk": "^1.1.3",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
     "file-loader": "^0.8.5",
@@ -19,7 +18,7 @@
     "gulp-watch": "^4.3.6",
     "html-loader": "^0.4.3",
     "jquery": "^2.2.4",
-    "lg-server": "^1.1.2",
+    "lg-server": "^1.1.3",
     "require-dir": "^0.3.0",
     "style-loader": "^0.13.1",
     "vue": "^1.0.24",
@@ -31,6 +30,5 @@
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "<%= author %>",
-  "license": "<%= License %>"
+  "license": "MIT"
 }
