--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "<%= packageName %>",
-  "version": "<%= version %>",
+  "name": "dev",
+  "version": "0.1.0",
   "description": " a LG project",
-  "author": "<%= author %>",
-  "email": "<%= email %>",
+  "author": "花夏",
+  "email": "liubiao@itoxs.com",
   "keywords": [
     "lg",
-    "<%= packageName %>"
+    "dev"
   ],
   "main": "index.js",
   "dependencies": {
@@ -18,8 +18,10 @@
     "gulp-sequence": "^0.4.5",
     "gulp-watch": "^4.3.6",
     "html-loader": "^0.4.3",
+    "http-proxy": "^1.14.0",
     "jquery": "^2.2.4",
     "lg-server": "^1.1.3",
+    "lodash": "^4.13.1",
     "require-dir": "^0.3.0",
     "style-loader": "^0.13.1",
     "vue": "^1.0.24",
@@ -31,5 +33,5 @@
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "<%= License %>"
+  "license": "MIT"
 }
