--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "dev",
-  "version": "0.1.1",
+  "name": "<%= packageName %>",
+  "version": "<%= version %>",
   "description": " a LG project",
-  "author": "花夏",
-  "email": "liubiao@itoxs.com",
+  "author": {
+    "name": "<%= author %>",
+    "email": "<%= email %>"
+  },
   "keywords": [
-    "lg",
-    "dev"
+    "lg", "<%= packageName %>"
   ],
   "main": "index.js",
   "dependencies": {
-    "chalk": "^1.1.3",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
     "file-loader": "^0.8.5",
@@ -18,10 +18,8 @@
     "gulp-sequence": "^0.4.5",
     "gulp-watch": "^4.3.6",
     "html-loader": "^0.4.3",
-    "http-proxy": "^1.14.0",
     "jquery": "^2.2.4",
-    "lg-server": "^1.1.3",
-    "lodash": "^4.13.1",
+    "lg-server": "^1.1.2",
     "require-dir": "^0.3.0",
     "style-loader": "^0.13.1",
     "vue": "^1.0.24",
@@ -33,5 +31,6 @@
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "MIT"
+  "author": "<%= author %>",
+  "license": "<%= License %>"
 }
