--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -24,7 +24,10 @@
     "style-loader": "^0.13.1",
     "vue": "^1.0.24",
     "vue-router": "^0.7.13",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "chalk": "^1.1.3",
+    "lodash": "^4.13.1",
+    "http-proxy": "^1.14.0"
   },
   "devDependencies": {},
   "scripts": {
