--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -27,6 +27,7 @@
     "webpack": "^1.13.1",
     "chalk": "^1.1.3",
     "lodash": "^4.13.1",
+    "mockjs": "^1.0.1-beta2",
     "http-proxy": "^1.14.0"
   },
   "devDependencies": {},
